--- a/KwikMart_DesktopApp/KwikMart_DesktopApp.csproj
+++ b/KwikMart_DesktopApp/KwikMart_DesktopApp.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="MaterialDesignColors" Version="2.0.5" />
     <PackageReference Include="MaterialDesignThemes" Version="4.4.0" />
+    <PackageReference Include="System.Device.Location.Portable" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
