--- a/KwikMart_DesktopApp/KwikMart_DesktopApp.csproj
+++ b/KwikMart_DesktopApp/KwikMart_DesktopApp.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="MaterialDesignColors" Version="2.0.5" />
     <PackageReference Include="MaterialDesignThemes" Version="4.4.0" />
+    <PackageReference Include="Microsoft.Toolkit.Wpf.UI.Controls" Version="6.1.2" />
   </ItemGroup>
 
 </Project>
