--- a/KwikMart_DesktopApp/KwikMart_DesktopApp.csproj
+++ b/KwikMart_DesktopApp/KwikMart_DesktopApp.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="MaterialDesignThemes" Version="4.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
+    <ProjectReference Include="..\KwikMart Database\KwikMart Database.sqlproj" />
+  </ItemGroup>
+
 </Project>
