add some features

--- a/KwikMart_DesktopApp/KwikMart_DesktopApp.csproj
+++ b/KwikMart_DesktopApp/KwikMart_DesktopApp.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\KwikMart Database\KwikMart Database.sqlproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Image\" />
+  </ItemGroup>
+
 </Project>
